Fixing section background images on tablets.

--- a/css/desktop.css
+++ b/css/desktop.css
@@ -54,7 +54,7 @@ h3 {
 
 /* --- Header --- */
 header {
-    background: url('../img/lotus.jpg') no-repeat fixed;
+    background: url('../img/lotus.jpg') no-repeat center center fixed;
     background-size: cover;
     background-position: 50% 0;
     height: 30em;
@@ -129,7 +129,7 @@ section p {
 
 /* --- Kametz Method --- */
 #kametz .section_header {
-    background: url('../img/stump.jpg') no-repeat fixed;
+    background: url('../img/stump.jpg') no-repeat center center fixed;
     background-size: cover;
 }
 
@@ -148,7 +148,7 @@ section p {
 
 /* --- Pricing --- */
 #pricing .section_header {
-    background: url('../img/insense.jpg') no-repeat fixed;
+    background: url('../img/insense.jpg') no-repeat center center fixed;
     background-size: cover;
 }
 
@@ -207,7 +207,7 @@ section p {
 
 /* --- Therapists --- */
 #therapists .section_header {
-    background: url('../img/massage.jpg') no-repeat fixed;
+    background: url('../img/massage.jpg') no-repeat center center fixed;
     background-size: cover;
 }
 
@@ -250,7 +250,7 @@ section p {
 
 /* --- Contact --- */
 #contact .section_header {
-    background: url('../img/table.jpg') no-repeat fixed;
+    background: url('../img/table.jpg') no-repeat center center fixed;
     background-size: cover;
 }
 
